--- a/VirginMoney/Base.lproj/Main.storyboard
+++ b/VirginMoney/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="aCt-8y-994">
-                                <rect key="frame" x="0.0" y="98" width="414" height="798"/>
+                                <rect key="frame" x="0.0" y="159" width="414" height="737"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="45" id="aGP-JT-XlB">
@@ -49,18 +49,29 @@
                                     <outlet property="delegate" destination="dYE-om-caz" id="esf-se-JKv"/>
                                 </connections>
                             </tableView>
+                            <searchBar contentMode="redraw" placeholder="Serach contacts" translatesAutoresizingMaskIntoConstraints="NO" id="zFQ-YZ-UTW">
+                                <rect key="frame" x="10" y="98" width="394" height="51"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dYE-om-caz" id="HqK-pL-z52"/>
+                                </connections>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="LMB-Lf-UDv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="zFQ-YZ-UTW" firstAttribute="leading" secondItem="LMB-Lf-UDv" secondAttribute="leading" constant="10" id="7Xy-WN-13q"/>
+                            <constraint firstItem="zFQ-YZ-UTW" firstAttribute="top" secondItem="LMB-Lf-UDv" secondAttribute="top" constant="10" id="Gfu-pS-ZtT"/>
                             <constraint firstItem="aCt-8y-994" firstAttribute="leading" secondItem="LMB-Lf-UDv" secondAttribute="leading" id="NwF-0z-pEa"/>
-                            <constraint firstItem="aCt-8y-994" firstAttribute="top" secondItem="LMB-Lf-UDv" secondAttribute="top" constant="10" id="P7g-iy-Znl"/>
+                            <constraint firstItem="aCt-8y-994" firstAttribute="top" secondItem="zFQ-YZ-UTW" secondAttribute="bottom" constant="10" id="X0t-uw-zdC"/>
                             <constraint firstAttribute="bottom" secondItem="aCt-8y-994" secondAttribute="bottom" id="arW-Mf-tVy"/>
+                            <constraint firstAttribute="trailing" secondItem="zFQ-YZ-UTW" secondAttribute="trailing" constant="10" id="xLl-Rg-uyc"/>
                             <constraint firstItem="aCt-8y-994" firstAttribute="trailing" secondItem="LMB-Lf-UDv" secondAttribute="trailing" id="yAF-2V-yVl"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="0Vy-jE-dHd"/>
                     <connections>
+                        <outlet property="searchBar" destination="zFQ-YZ-UTW" id="GnS-If-n0D"/>
                         <outlet property="tbl_Contacts" destination="aCt-8y-994" id="VNj-mf-Lj3"/>
                         <segue destination="Xqs-fy-o27" kind="show" identifier="showDetails" id="zA5-8Y-YrA"/>
                     </connections>
@@ -81,20 +92,20 @@
                                 <rect key="frame" x="10" y="98" width="394" height="705"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5mv-MZ-Yfe">
-                                        <rect key="frame" x="10" y="50" width="100" height="100"/>
+                                        <rect key="frame" x="10" y="20" width="100" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="11s-rC-nj1"/>
                                             <constraint firstAttribute="height" constant="100" id="nRi-2O-VuO"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="UdZ-ix-yPi">
-                                        <rect key="frame" x="120" y="58.5" width="264" height="21"/>
+                                        <rect key="frame" x="120" y="28.5" width="264" height="21"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="pAU-5k-EXx">
-                                        <rect key="frame" x="120" y="89.5" width="264" height="21"/>
+                                        <rect key="frame" x="120" y="59.5" width="264" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="kNf-Aa-Hjr"/>
                                         </constraints>
@@ -103,7 +114,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="8Oy-8K-Xjs">
-                                        <rect key="frame" x="120" y="120.5" width="264" height="21"/>
+                                        <rect key="frame" x="120" y="90.5" width="264" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -119,7 +130,7 @@
                                     <constraint firstItem="pAU-5k-EXx" firstAttribute="height" secondItem="8Oy-8K-Xjs" secondAttribute="height" id="Sjb-pq-SGq"/>
                                     <constraint firstItem="pAU-5k-EXx" firstAttribute="leading" secondItem="5mv-MZ-Yfe" secondAttribute="trailing" constant="10" id="baP-we-VQT"/>
                                     <constraint firstItem="5mv-MZ-Yfe" firstAttribute="leading" secondItem="kaO-ot-Ajz" secondAttribute="leading" constant="10" id="gXD-2a-yrc"/>
-                                    <constraint firstItem="5mv-MZ-Yfe" firstAttribute="top" secondItem="kaO-ot-Ajz" secondAttribute="top" constant="50" id="jQp-wg-glC"/>
+                                    <constraint firstItem="5mv-MZ-Yfe" firstAttribute="top" secondItem="kaO-ot-Ajz" secondAttribute="top" constant="20" id="jQp-wg-glC"/>
                                     <constraint firstAttribute="trailing" secondItem="pAU-5k-EXx" secondAttribute="trailing" constant="10" id="ln0-Ag-w2O"/>
                                     <constraint firstItem="pAU-5k-EXx" firstAttribute="width" secondItem="8Oy-8K-Xjs" secondAttribute="width" id="mN7-Ik-C0L"/>
                                     <constraint firstItem="pAU-5k-EXx" firstAttribute="top" secondItem="UdZ-ix-yPi" secondAttribute="bottom" constant="10" id="o7u-fd-cuJ"/>
